[package]
name = "puzzle_engine"
version = "0.4.5"
edition = "2021"
authors = ["Andrew Sims andrew,simsd.@gmail.com"]
description = "An engine for puzzles."
license = "MIT"
repository = "https://github.com/Andrewsimsd/puzzle_engine"
homepage = "https://github.com/Andrewsimsd/puzzle_engine"
readme = "README.md"
keywords = ["maze", "cipher", "puzzle", "engine", "chess"]
categories = ["games"]

[dependencies]
rand = "0.9"